# RalphGUI

./: .coverage  .gitignore  .ralphrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  SPECIFICATION_WORKSHOP.md  TESTING.md  build.bat  pyinstaller.spec  pyproject.toml  requirements.txt  run.py  sample-prd.md  start.bat  test_full_flow.sh
.claude/: settings.local.json
.claude/hooks/: check_logs.txt  stop_check_logs.txt
.github/workflows/: claude.yml  test.yml
.ralph/: AGENT.md  PROMPT.md
docs/: CLI选项参考.md  实施状态.md  实施计划.md  测试指南.md  示例PRD.md  规范研讨会.md  贡献指南.md
docs/.claude/hooks/: check_logs.txt
docs/archive/2025-10-milestones/: 专家小组审查.md  历史存档.md  测试实施摘要.md  状态文档.md  用例文档.md  阶段1完成.md  阶段2完成.md
docs/user-guide/: 01-快速入门.md  02-理解Ralph文件.md  03-编写有效需求.md  用户指南.md
examples/simple-cli-tool/: README.md
lib/: __init__.py  circuit_breaker.py  date_utils.py  enable_core.py  file_protection.py  log_utils.py  response_analyzer.py  task_sources.py  timeout_utils.py  wizard_utils.py
scripts/: __init__.py  create_files.py  install.py  migrate.py  ralph_enable.py  ralph_enable_ci.py  ralph_import.py  ralph_loop.py  ralph_monitor.py  ralph_stats.py  setup.py  uninstall.py
src/ralph_gui/: __init__.py  __main__.py  app.py  main.py  main_window.py
src/ralph_gui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wrappers/: install.bat  ralph-enable-ci.bat  ralph-enable.bat  ralph-import.bat  ralph-migrate.bat  ralph-monitor.bat  ralph-setup.bat  ralph-stats.bat  ralph.bat
(+48 files in other folders)
