[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-gui"
version = "0.1.0"
description = "Ralph for Claude Code - Windows GUI"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "pyyaml>=6.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
